# rust-sdk

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: quickstart.rs
src/: client.rs  error.rs  lib.rs  types.rs
tests/: client_test.rs
