[package]
name = "maschina-sdk"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for the Maschina API"
license = "Apache-2.0"
authors = ["Maschina Labs <sdk@maschina.ai>"]
homepage = "https://maschina.ai"
repository = "https://github.com/maschina-labs/sdk-rust"
documentation = "https://docs.rs/maschina-sdk"
readme = "README.md"
keywords = ["maschina", "ai", "agents", "sdk", "autonomous"]
categories = ["api-bindings", "web-programming::http-client", "asynchronous"]
rust-version = "1.75"
exclude = ["tests/", ".github/"]

[lib]
name = "maschina_sdk"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Async
tokio = { version = "1", features = ["full"] }
# Error handling
thiserror = "1"
# IDs
uuid = { version = "1", features = ["v4", "serde"] }
# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockito = "1"
